welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:1: error: identifier expected but ':' found.
def icyHot(temp1:Int, :Int):Boolean = {
                      ^icyHot:9: error: ':' expected but '}' found.
 }
 ^